# geo-muni

./: .gitignore  CASE_STUDY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LINKEDIN_POST.txt  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
branding/: palette.md
data/raw/: municipios_sample.geojson  puntos_sample.csv
notebooks/: 01_demo.ipynb
scripts/: GENERAR_GIF.md
src/geo_muni/: __init__.py  assign.py  cli.py
tests/: test_assign.py
