[project]
name = "geo-muni"
version = "0.1.0"
description = "Asignación de municipios por georreferencia (RD) via spatial join."
authors = [{name = "Raquel Roa"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rtree>=1.2",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
geo-muni = "geo_muni.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
